# Launcher-N.O.I.R

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SETUP.md  electron-builder.json  launcher.config.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.main.json  tsconfig.node.json
apps/desktop/: index.html  vite.config.ts
apps/desktop-electron/src/: main.ts  preload.ts
apps/desktop/src/: App.tsx  global.d.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: bridge.ts
auth-system/src/: accounts.ts  microsoft.ts  offline.ts
config-system/src/: paths.ts  settings.ts
curseforge-integration/src/: curseforge.ts
installer/src/: java.ts  modloader.ts  modpack.ts
instance-manager/src/: instances.ts
launcher-core/src/: logger.ts  main.ts  preload.ts
launcher-ui/: index.html  tsconfig.json  vite.config.ts
launcher-ui/src/: App.tsx  global.d.ts  index.css
launcher-ui/src/assets/: README.txt
minecraft-runner/src/: runner.ts
scripts/: patch-electron-builder.mjs  run-electron-builder.mjs  run-electron-dev.mjs
scripts/tooling/: npm  npm.cmd
tests/: avatar-url.test.mjs  curseforge-client.test.mjs  forge-launch.test.mjs  instance-manager.test.mjs  microsoft-auth.test.mjs  modloader.test.mjs  noir-service.test.mjs  planner.test.mjs  shared-config.test.mjs
updater/src/: autoUpdater.ts
