[package]
name = "noir-launcher"
version = "0.2.0"
description = "NOIR Launcher desktop shell"
authors = ["NOIR"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = []
